# HindiBabyNet

./: .gitignore  README.md  main.py  pyproject.toml  template.py
HindiBabyNet-CDIAnalysis/: .gitignore  README.md  pyproject.toml
HindiBabyNet-CDIAnalysis/configs/: config.yaml
HindiBabyNet-CDIAnalysis/docs/: analysis_plan.md  data_management.md  privacy_and_ethics.md
HindiBabyNet-CDIAnalysis/metadata/: data_dictionary.md  education_mapping.csv  language_mapping.csv  participant_tracking_template.csv  response_mapping.csv  sex_mapping.csv  word_mapping.csv
HindiBabyNet-CDIAnalysis/notebooks/: 00_check_raw_files_and_linking.ipynb  01_CDI1_EDA_and_Norms.ipynb  01_create_metadata_and_word_mapping.ipynb  02_CDI2_EDA_and_Norms.ipynb  02_score_8_18_cdi.ipynb  03_score_19_36_cdi.ipynb  04_wordbank_style_tables.ipynb  05_eda_8_18.ipynb  06_eda_19_36.ipynb  07_combined_summary_and_quality_checks.ipynb  Hindi_MCDI_CDI1_EDA_and_Norms.ipynb  Hindi_MCDI_CDI2_EDA_and_Norms.ipynb
HindiBabyNet-CDIAnalysis/scripts/: 01_build_processed_outputs.py  check_form_links.py  check_raw_files.py  compute_category_scores.py  compute_participant_scores.py  compute_vocabulary_scores.py  create_metadata_files.py  create_participant_linkage.py  create_participant_metadata.py  create_participant_tracking.py  create_project_structure.py  create_word_level_long.py  create_wordbank_tables.py  run_all.py  run_eda.py  score_cdi_19_36.py  score_cdi_8_18.py
HindiBabyNet-CDIAnalysis/src/hindibabynet_cdi/: __init__.py  age.py  cleaning.py  columns.py  config.py  eda_tables.py  eligibility.py  io.py  item_dictionary.py  linking.py  metadata.py  norms.py  notebook_helpers.py  pipeline.py  plotting.py  qc.py  reporting.py  scoring.py  word_mapping.py
HindiBabyNet-CDIAnalysis/tests/: test_cleaning.py  test_eda_tables.py  test_io_metadata.py  test_linking.py  test_metadata_generation.py  test_pipeline_core.py  test_scoring.py  test_script_outputs.py
HindiBabyNet-Docs/: README.md
HindiBabyNet-Pipeline/: .gitignore  README.md
HindiBabyNet-Pipeline/configs/: config.example.yaml
HindiBabyNet-Pipeline/docs/: manual_annotation_protocol.md  model_evaluation_protocol.md
HindiBabyNet-Pipeline/external_models/: README.md
HindiBabyNet-Pipeline/scripts/: run_pipeline.sh  (+1 more)
HindiBabyNet-ProsodyModel/: README.md
HindiBabyNet-ProsodyStats/: README.md
HindiBabyNet-VocalInputStats/: .gitignore  HindiBabyNet_stat_model_report.Rmd  README.md  pyproject.toml
HindiBabyNet-VocalInputStats/R/: 00_setup.R  01_input_models.R  02_input_output_models.R  03_model_tables_and_plots.R  04_final_report.R  README.md  model_report_helpers.R  report.qmd  report.tex  research_questions.yaml
HindiBabyNet-VocalInputStats/R/functions/: data_prep.R  final_report.R  model_diagnostics.R  model_selection.R  monte_carlo_ci.R  prediction_plots.R  reporting.R
HindiBabyNet-VocalInputStats/R/tests/: test_age_plot_contract.R
HindiBabyNet-VocalInputStats/configs/: config.example.yaml  config.yaml
HindiBabyNet-VocalInputStats/notebooks/: 01_EDA.ipynb
HindiBabyNet-VocalInputStats/renv/: activate.R  settings.json
HindiBabyNet-VocalInputStats/src/hindibabynet_vocalinputstats/: __init__.py  build_master_dataset.py  cli.py  config.py  create_long_format.py  durations.py  eda.py  ids.py  io.py  plots.py  vtc_summary.py
HindiBabyNet-VocalInputStats/src/hindibabynet_vocalinputstats.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
HindiBabyNet-VocalInputStats/tests/: test_config_io.py  test_duration_vtc.py  test_eda.py  test_long_format.py  test_master_dataset.py  test_plots.py  test_privacy_outputs.py
configs/: config.yaml  params.yaml
docs/: audio_preparation.md  pipeline_specification.md  project_map.md  textgrid_generation.md  vtc_backend.md  xgb_backend.md
notebooks/: 00_research.ipynb  01_listen_outputs.ipynb  01_pipeline_artifacts_overview.ipynb  02_annotation_player.ipynb  03_read_parquets.ipynb  04_vtc_csv_descriptive_analysis.ipynb
scripts/: annotate_ads_ids.py  create_test_set.py  evaluate_test_set.py  run_all.sh  run_annotate_segments.sh  run_classify_vtc.sh  run_classify_xgb.sh  run_evaluate_models.sh  run_generate_textgrids.sh  run_gui.sh  run_stage_01.sh  run_stage_02_from_parquet.sh  run_stage_02_single_wav.sh  run_stage_03.sh  run_stage_04.sh  run_stage_05.sh  run_stage_06.sh
tests/: test_audio_preparation.py  test_config_loading.py  test_csv_to_textgrid.py  test_evaluation_metrics.py  test_gui.py  test_segment_sampler.py  test_smoke.py  test_stage03_cli.py  test_task_cli_wrappers.py  test_vtc_integration.py
(+276 files in other folders)
