[project]
name = "hindibabynet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "huggingface-hub<0.21",
    "matplotlib>=3.7,<3.9",
    "pandas>=2.0,<2.3",
    "pyannote-audio>=3.4.0",
    "pyarrow>=14,<24",
    "pydantic>=2.5,<3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6,<7",
    "soundfile>=0.12,<1",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "tqdm>=4.64,<5",
    "webrtcvad>=2,<3",
]

[dependency-groups]
dev = [
    "pytest>=7,<9",
    "ruff>=0.4,<1",
]
[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
