[project]
name = "hindibabynet-cdi-analysis"
version = "0.1.0"
description = "Scaffold for Hindi CDI questionnaire analysis from Nettskjema"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyyaml>=6,<7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hindibabynet_cdi*"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=7,<9",
    "ruff>=0.4,<1",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.uv]
index-url = "https://pypi.org/simple"