[project]
name = "hindibabynet-cdi"
version = "0.1.0"
description = "Reproducible Hindi CDI questionnaire analysis from Nettskjema"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.7,<4",
    "numpy>=1.24,<2",
    "openpyxl>=3.1,<4",
    "pandas>=2.0,<3",
    "pyyaml>=6,<7",
    "python-dateutil>=2.8,<3",
    "pytest>=7,<9",
    "ruff>=0.4,<1",
    "seaborn>=0.12,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hindibabynet_cdi*"]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.uv]
index-url = "https://pypi.org/simple"